--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v8=qAJ44G5Bm7"> -->
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v8=qAJ44G5Bm7" color="#885bd5">
     <link rel="shortcut icon" href="%PUBLIC_URL%/cpLogo.png?v8=qAJ44G5Bm7">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="msapplication-TileColor" content="#603cba">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6c63ff" />
     <meta
-      name="Saad Pasta Portfolio"
+      name="Alexa King Portfolio"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7">
-    <meta property="og:title" content="Saad Pasta Portfolio" />
+    <meta property="og:title" content="Alexa King Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://developerfolio.js.org/" />
     <meta property="og:image" content="https://developerfolio.js.org/static/media/developerActivity.59389695.svg" />
